--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -47,3 +47,16 @@ body {
     font-size: 20px;
     padding-right: 20px;
 }
+
+#language-select {
+    appearance: none;
+    /* safari */
+    -webkit-appearance: none;
+    font-family: 'Roboto Condensed', cursive, monospace;
+    font-size: 20px;
+    font-weight: bold;
+    position: relative;
+    background-color: #000000;
+    color: #ffffff;
+    cursor: pointer;
+}
