Added dark mode style to apply once selected

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -60,3 +60,9 @@ body {
     color: #ffffff;
     cursor: pointer;
 }
+
+/* Dark mode + toggle*/
+.dark-mode {
+    background-color: #1e1e1e;
+    color: #ffffff;
+}
