--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -125,3 +125,14 @@ input:checked + .slider:before {
 .slider.round:before {
     border-radius: 50%;
 }
+
+/* Content */
+.content{
+    position: relative;
+    top: 100px;
+    left: 50px;
+    width: 1000px;
+    height: 5000px;
+    font-size: 17px;
+    font-family: 'Roboto Condensed', cursive, monospace;
+}
