--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -91,7 +91,7 @@ body {
 .switch {
     position: relative;
     display: inline-block;
-    width: 100px;
+    width: 90px;
     height: 50px;
 }
   
@@ -99,7 +99,7 @@ body {
     opacity: 0;
     width: 0;
     height: 0;
-  }
+}
 
 .slider {
     position: absolute;
@@ -115,14 +115,18 @@ body {
 
 .slider:before {
     position: absolute;
-    content: "";
-    height: 40px;
-    width: 40px;
+    content: '';
+    height: 50px;
+    width: 50px;
     left: 0px;
-    bottom: 0px;
+    bottom: -5px;
     background-color: white;
     -webkit-transition: .4s;
     transition: .4s;
+    content: '✹';
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 input:checked + .slider {
@@ -134,9 +138,14 @@ input:focus + .slider {
 }
   
 input:checked + .slider:before {
-    -webkit-transform: translateX(50px);
-    -ms-transform: translateX(50px);
-    transform: translateX(50px);
+    -webkit-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+    transform: translateX(30px);
+    background-color: #1a1a1a;
+    content: '☾';
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .slider.round {
