--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -1,3 +1,9 @@
+/* Make sure HTML and Body tags take up the full screen*/
+html {
+    margin: 0;
+    height: 100vh;
+}
+
 body {
     background-color: #ffffff;
     color: #000000;
@@ -6,8 +12,12 @@ body {
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
+/* Animation to fade in the navbar and footer */
 @keyframes fadeInAnimation {
     0% {
         opacity: 0;
@@ -18,6 +28,7 @@ body {
     }
 }
 
+/* Some shared style between the navbar and footer */
 .banner {
     z-index: 999;
     overflow: hidden;
@@ -31,9 +42,11 @@ body {
     font-family: "Roboto Condensed", cursive, monospace;
 }
 
-/*.footer.banner {
+.footer.banner {
     bottom: 0;
-}*/
+    position: relative;
+    padding-left: 40%;
+}
 
 /* Navigation bar*/
 .navbar.banner {
@@ -71,15 +84,13 @@ body {
     margin-right: 10px;
 }
 
-
-
+/* Hide the scroll bar for the language select in some browsers*/
 select {
     overflow-y: auto;
 }
 
 #language-select {
     appearance: none;
-    /* safari */
     -webkit-appearance: none;
     font-family: 'Roboto Condensed', cursive, monospace;
     font-size: 2rem;
@@ -96,7 +107,7 @@ select {
     color: #175a93;
 }
 
-/* Dark mode + toggle*/
+/* Dark mode */
 .dark-mode {
     background-color: #1e1e1e;
     color: #ffffff;
@@ -175,14 +186,13 @@ input:checked + .slider:before {
 /* Content */
 .content {
     position: relative;
-    top: 100px;
     left: 50px;
     width: 1000px;
-    height: 5000px;
     font-size: 1rem;
     font-family: 'Roboto Condensed', cursive, monospace;
     padding-left: 20%;
-    padding-top: 20px;
+    margin-top: 140px;
+    flex: 1;
 }
 
 .section-heading{
