--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -2,17 +2,19 @@
 html {
     margin: 0;
     height: 100vh;
+    width: 100vw;
 }
 
 body {
     background-color: #ffffff;
     color: #000000;
     margin: 0;
-    padding: 20;
+    padding: 0;
     animation: fadeInAnimation ease 2s;
     animation-iteration-count: 1;
     animation-fill-mode: forwards;
     min-height: 100vh;
+    max-width: 100vw;
     display: flex;
     flex-direction: column;
 }
@@ -31,21 +33,74 @@ body {
 /* Some shared style between the navbar and footer */
 .banner {
     z-index: 999;
-    overflow: hidden;
     background-color: #175a93;
     position: fixed;
     width: 100%;
-    padding: 20px;
     display: flex;
     justify-content: space-between;
     color: #f2f2f2;
     font-family: "Roboto Condensed", cursive, monospace;
+    font-size: 1.5rem;
 }
 
 .footer.banner {
     bottom: 0;
     position: relative;
     padding-left: 40%;
+}
+
+/* For the hamburger transform into an X */
+svg {
+    position: absolute;
+    top: -2px;
+    right: 0;
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.active svg {
+    transform: rotate(90deg);
+}
+path {
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dasharray 500ms cubic-bezier(0.4, 0, 0.2, 1),
+      stroke-dashoffset 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+path:nth-child(1) {
+    transform-origin: 36% 40%;
+}
+path:nth-child(2) {
+    stroke-dasharray: 29 299;
+}
+path:nth-child(3) {
+    transform-origin: 35% 63%;
+}
+path:nth-child(4) {
+    stroke-dasharray: 29 299;
+}
+path:nth-child(5) {
+    transform-origin: 61% 52%;
+}
+path:nth-child(6) {
+    transform-origin: 62% 52%;
+}
+.active path:nth-child(1) {
+    transform: translateX(9px) translateY(1px) rotate(45deg);
+}
+.active path:nth-child(2) {
+    stroke-dasharray: 225 299;
+    stroke-dashoffset: -72px;
+}
+.active path:nth-child(3) {
+    transform: translateX(9px) translateY(1px) rotate(-45deg);
+}
+.active path:nth-child(4) {
+    stroke-dasharray: 225 299;
+    stroke-dashoffset: -72px;
+}
+.active path:nth-child(5) {
+    transform: translateX(9px) translateY(1px) rotate(-45deg);
+}
+.active path:nth-child(6) {
+    transform: translateX(9px) translateY(1px) rotate(45deg);
 }
 
 /* Navigation bar*/
@@ -60,7 +115,6 @@ body {
 }
 
 .navbar a {
-    float: left;
     display: block;
     color: #f2f2f2;
     text-align: justify;
@@ -70,33 +124,37 @@ body {
 
 .navbar-left {
     display: flex;
-    font-size: 3rem;
-    
-    padding-left: 15%;
 }
 
 .navbar-right {
-    display: flex;
+    display: none;
     justify-content: flex-end;
     font-weight: bold;
-    font-size: 2rem;
-    padding-right: 12%;
-    margin-right: 10px;
+    font-size: 1.5rem;
+    margin-top: 50px;
+    background-color: #0d3050;
+    width: 100%;
+    position: absolute;
+    left: 0;
+    padding-bottom: 15px;
+    text-align: center;
 }
 
 /* Hide the scroll bar for the language select in some browsers*/
 select {
     overflow-y: auto;
+    display: block;
+    margin: 0 auto;
 }
 
 #language-select {
     appearance: none;
     -webkit-appearance: none;
     font-family: 'Roboto Condensed', cursive, monospace;
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     position: relative;
-    background-color: #175a93;
+    background-color: #0d3050;
     color: #ffffff;
     cursor: pointer;
     bottom: 10px;
@@ -118,6 +176,7 @@ select {
     display: inline-block;
     width: 90px;
     height: 50px;
+    left: -10px;
 }
   
 .switch input { 
@@ -225,4 +284,47 @@ input:checked + .slider:before {
     border-radius: 20px;
     font-size: 1.2rem;
     font-family: 'Roboto Condensed', cursive, monospace;
+}
+
+
+@media (min-width: 950px){
+    svg {
+        display: none;
+    }
+
+    .banner{
+        padding: 20px;
+        font-size: 3rem;
+    }
+
+    #language-select {
+        background-color: #175a93;
+        font-size: 2rem;
+    }
+
+    .navbar a {
+        float: left;
+    }
+
+    .navbar-left{
+        padding-left: 15%;
+        display: flex;
+    }
+
+    .navbar-right {
+        display: flex;
+        margin-top: 10px;
+        background-color: #175a93;
+        padding-right: 12%;
+        padding-bottom: 0;
+        margin-right: 10px;
+        width: auto;
+        position: relative;
+        left: auto;
+        font-size: 2rem;
+    }
+
+    .switch {
+        left: 0;
+    }
 }
