--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -434,6 +434,17 @@ input:checked + .slider:before {
     margin: 8px auto;
 }
 
+.divider-exp {
+    border-color: black;
+    padding-top: 10px;
+    margin-bottom: 30px;
+}
+
+.dark-mode .divider-exp {
+    border-color: white;
+    background-color: transparent;
+}
+
 .content-divider {
     opacity: 1;
     border-color: rgba(0, 0, 0, 1);
@@ -484,6 +495,10 @@ input:checked + .slider:before {
     border-top: 1px solid black;
     height: 1px;
     width: 70%;
+}
+
+.dark-mode .education-divider{
+    border-top: 1px solid white;
 }
 
 /* Cookie notice*/
@@ -621,7 +636,9 @@ input:checked + .slider:before {
         width: 1px;
         margin: 20px 20px 0px 0px;
     }
-
+    .dark-mode .education-divider{
+        border-left: 1.5px solid white;
+    }
     .cookie-notice {
         width: 40%;
         left: 30%;
