--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -500,6 +500,7 @@ input:checked + .slider:before {
     overflow: hidden;
     white-space: nowrap;
     padding-top: 20px;
+    mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
 }
 
 .icon-container {
@@ -513,7 +514,7 @@ input:checked + .slider:before {
 }
 
 .dark-mode .skill-icon {
-    filter: drop-shadow(0 0 5px #ffffff);
+    filter: drop-shadow(0 0 1px #ffffff);
 }
 
 .education-titles {
