--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -500,12 +500,12 @@ input:checked + .slider:before {
     overflow: hidden;
     white-space: nowrap;
     padding-top: 20px;
+    mask-image: linear-gradient(to right, transparent, black 5%, black 95%, transparent);
 }
 
 .icon-container {
     will-change: transform;
     transform: translateZ(0);
-    backface-visibility: hidden;
     display: flex;
     animation: moveIcons 30s linear infinite;
 }
