Added function to get icon dimensions based on screen size and added listener to get screen size changes to handle chaning the icons sizes

--- a/nginx/web_code/stylesheets/default.css
+++ b/nginx/web_code/stylesheets/default.css
@@ -515,7 +515,7 @@ input:checked + .slider:before {
     margin-right: 20px;
 }
 
-.dark-mode .skill-icon {
+.dark-mode .conveyor-belt {
     filter: drop-shadow(0 0 1px #ffffff);
 }
 
